Tilføjelse af ting til ejeraftalen

--- a/business/ejerAftale/main.tex
+++ b/business/ejerAftale/main.tex
@@ -29,12 +29,12 @@
 
 %%% Various.
 \DeclareUnicodeCharacter{00A0}{~} % Removes an OSX generated character.
+\RequirePackage{todonotes}
+\newcommand{\todoB}[1]{\todo[color=green!40]{#1}}
 
 \begin{document}
-\author{Rasmus L. Christensen \& Henrik Klarup}
-\title{Venture Cup\\
-macellum.dk\\
-Fish Auction Price Visualization}
+\author{macellum.dk}
+\title{Ownership Agreement}
 \date{\today}
 \maketitle
 \begin{centering}
@@ -51,15 +51,80 @@ Fish Auction Price Visualization}
 
 \cleardoublepage
 
-\section{Brief Introduction (max 1/4 page)}
+\section{Ownership}
+\label{sec:sign}
+This docuemnt contains the ownershipagreement of macellum.dk (henceforth "the company"). The ownership agreement is as of today signed between the following three parties:
+\newline
+\begin{center}
+\begin{tabular}{ll}
+\makebox[2.5cm]{\hrulefill} & \makebox[3.5in]{\hrulefill}\\
+Date & Rasmus Lundgaard Christensen\\
+	 & Fredrikparken 11, ST. 2\\
+	 & 6400 Sønderborg\\[8ex]
+\makebox[2.5cm]{\hrulefill} & \makebox[3.5in]{\hrulefill}\\
+Date & Henrik Juul Holm Klarup\\
+	 & Toldstrupsgade 14A\\
+	 & 9000 Aalborg\\[8ex]
+\makebox[2.5cm]{\hrulefill} & \makebox[3.5in]{\hrulefill}\\
+Date & Frits Lundgaard Christensen\\
+	 & Mejlvang 5\\
+	 & 6950 Ringkøbing\\[8ex]
+\end{tabular}
+\end{center}
 
-\section{Product and/or Service (1 page)}
+\subsection{Owners}
+The company is solely owned by the persons described in section \ref{sec:sign}. Ownership commences on 1/2/2015.
 
-\section{Market and Costumer 1/2 page}
+\subsection{Purpose}
+The purpose of the company, is to run and develop software tools to aid fishermen and businesses related to the fishing industry in and around the Northern Sea.
 
-\section{Industry and Competetion 1/2 page}
+The company is based in Aalborg, Denmark \todoB{Skal opdateres når vi kommer så langt.}
 
-\section{People and organisation 1/2 page}
+\subsection{Capital Shares}
+The company shares are divded according to the following:
+Rasmus Christensen: 45\%
+Henrik Klarup: 45\%
+Frits L. Christensen: 10\%
 
+At future capital increases, the parties hereby agree that they should maintain the current individual ownership shares (9/9/2).
+
+To increase the capital in the company, the owners must agree, no matter the cause of the raise. 
+
+Other capital shares in the Company, acquired by existing capital owners is automatically converted by this agreement. 
+
+\section{Bylaws}
+
+\subsection{Board}
+
+\subsection{Daily Management}
+
+\subsection{Tegningsregel}
+
+\subsection{Illness}
+
+\section{Overtaking Capital Shares}
+
+\subsection{Right to sell}
+
+\subsection{Obligation to sell}
+
+\subsection{Death}
+
+\subsection{Dissolving the Company}
+
+\section{Pawn / Bailing}
+
+\subsection{Gross Income Share}
+
+\section{Mislighold}
+
+\subsection{Confidentiality}
+
+\subsection{Business between the company and owners}
+
+\subsection{Change of Rules and Dissolving}
+
+\section{Legal Disputes}
+Any legal dispute are in solved in accordance with danish law, and are solved at Byretten i Aalborg.
 
 \end{document}
