En kæmpe stak changes.

--- a/business/ejerAftale/main.tex
+++ b/business/ejerAftale/main.tex
@@ -10,6 +10,7 @@
 \RequirePackage{listings}
 \RequirePackage{cancel} % Ain't quite sure what this one does..
 \RequirePackage{mdwlist} % Allows the use of \tightlist
+\renewcommand{\contentsname}{Indhold}
 
 %%% Tables in \infty shades of grey.
 \RequirePackage[table]{xcolor}
@@ -20,7 +21,7 @@
 \RequirePackage{draftwatermark}
 \SetWatermarkScale{3}
 \SetWatermarkColor{lightblue}
-\SetWatermarkText{macellum.dk}
+\SetWatermarkText{Draft}
 
 %%% Redefine vectors to be bold.
 \let\oldhat\hat
@@ -34,7 +35,7 @@
 
 \begin{document}
 \author{macellum.dk}
-\title{Ownership Agreement}
+\title{Ejerskabs Aftale}
 \date{\today}
 \maketitle
 \begin{centering}
@@ -51,9 +52,9 @@
 
 \cleardoublepage
 
-\section{Ownership}
+\section{Ejerskab}
 \label{sec:sign}
-This docuemnt contains the ownershipagreement of macellum.dk (henceforth "the company"). The ownership agreement is as of today signed between the following three parties:
+Dette dokument beskriver ejerskabsaftalen af macellum.dk (herefter firamet). Ejer aftalen er som beskrevet, og er godkendt af de understående parter.\\
 \newline
 \begin{center}
 \begin{tabular}{ll}
@@ -72,59 +73,24 @@ Date & Frits Lundgaard Christensen\\
 \end{tabular}
 \end{center}
 
-\subsection{Owners}
-The company is solely owned by the persons described in section \ref{sec:sign}. Ownership commences on 1/2/2015.
+\subsection{Formål}
+Formålet med firmaet er at udvikle software værktøjer til brug i fiskeindustrien og dertilhørende under industrier, der hører til i og omkring nordsøen.  
 
-\subsection{Purpose}
-The purpose of the company, is to run and develop software tools to aid fishermen and businesses related to the fishing industry in and around the Northern Sea.
+Firmaet har hovesæde i Aalborg, Danmark.
 
-The company is based in Aalborg, Denmark \todoB{Skal opdateres når vi kommer så langt.}
+\subsection{Ejerskabsfordeling}
+Ejerskabet er fordelt i procenvis ejerskab. Ejerskabet er 3-delt. Rasmus Lundgaard Christensen ejer 45\%, Henrik Klarup ejer 45\% og Frits Lundgaard Christensen ejer 10\%.
 
-\subsection{Capital Shares}
-The company shares are divded according to the following:
-Rasmus Christensen: 45\%
-Henrik Klarup: 45\%
-Frits L. Christensen: 10\%
+\subsection{Ændringer i Ejerforhold}
+Ved ændringer i ejerforholdene, kræves en procentmæssig enighed på 60\%. 
 
-At future capital increases, the parties hereby agree that they should maintain the current individual ownership shares (9/9/2).
+Hvis en ejer ønsker at sælge, tilbydes de andre ejere at overtage ejerandelen, før denne forhandles offentligt. 
 
-To increase the capital in the company, the owners must agree, no matter the cause of the raise. 
+Kapitaludvidelser kan ligeledes kun foretages ved en procentmæssig enighed på 60\%. 
 
-Other capital shares in the Company, acquired by existing capital owners is automatically converted by this agreement. 
+Det enkelte bestyrelsesmedlem kan ikke hæfte for mere end vedkomne selv har godkendt. Der kan derfor ikke foretages lån i virksomheden uden at der er fuldstændig enighed i bestyrelsen omkring dette. 
 
-\section{Bylaws}
-
-\subsection{Board}
-
-\subsection{Daily Management}
-
-\subsection{Tegningsregel}
-
-\subsection{Illness}
-
-\section{Overtaking Capital Shares}
-
-\subsection{Right to sell}
-
-\subsection{Obligation to sell}
-
-\subsection{Death}
-
-\subsection{Dissolving the Company}
-
-\section{Pawn / Bailing}
-
-\subsection{Gross Income Share}
-
-\section{Mislighold}
-
-\subsection{Confidentiality}
-
-\subsection{Business between the company and owners}
-
-\subsection{Change of Rules and Dissolving}
-
-\section{Legal Disputes}
-Any legal dispute are in solved in accordance with danish law, and are solved at Byretten i Aalborg.
+\subsection{Uenigheder}
+Uenigheder afgøres i henhold til Dansk lovgivning, og for så vidt muligt skal disse afgøres ved byretten i Aalborg.  
 
 \end{document}
