--- a/business/startup competetion/cover_letter_3.tex
+++ b/business/startup competetion/cover_letter_3.tex
@@ -1,5 +1,25 @@
-\documentclass[12pt]{article}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Long Lined Cover Letter
+% LaTeX Template
+% Version 1.0 (1/6/13)
+%
+% This template has been downloaded from:
+% http://www.LaTeXTemplates.com
+%
+% Original author:
+% Matthew J. Miller
+% http://www.matthewjmiller.net/howtos/customized-cover-letter-scripts/
+%
+% License:
+% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
+%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+%----------------------------------------------------------------------------------------
+%	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
+%----------------------------------------------------------------------------------------
+
+\documentclass[a4paper,10pt,dateno,oneside,fleqn,sigleft]{newlfm} % Extra options: 'sigleft' for a left-aligned signature, 'stdletternofrom' to remove the from address, 'letterpaper' for US letter paper - consult the newlfm class manual for more options
 \RequirePackage{fullpage} % Small margins.
 \setlength{\parindent}{0pt} % Default is 15pt.
 
@@ -13,91 +33,58 @@
 \RequirePackage{mdwlist} % Allows the use of \tightlist
 
 %%% Tables in \infty shades of grey.
-\RequirePackage[table]{xcolor}
-\definecolor{lightblue}{rgb}{0.88,0.91,1.0}
-\RequirePackage{array,booktabs} % Tables.
+%\RequirePackage[table]{xcolor}
+%\definecolor{lightblue}{rgb}{0.88,0.91,1.0}
+%\RequirePackage{array,booktabs} % Tables.
 
-%%% Enabling the "draft" on the pages to show that it is only a draft.
-%\RequirePackage{draftwatermark}
-%\SetWatermarkScale{5}
-%\SetWatermarkColor{lightblue}
-%\SetWatermarkText{DRAFT}
-
-
-\RequirePackage[colorinlistoftodos]{todonotes}
 
 %%% Redefine vectors to be bold.
 \let\oldhat\hat
 \renewcommand{\vec}[1]{\boldsymbol{#1}}
 \renewcommand{\hat}[1]{\oldhat{\mathbf{#1}}}
 
+%%% Various.
+\DeclareUnicodeCharacter{00A0}{~} % Removes an OSX generated character.
+
+\usepackage{charter} % Use the Charter font for the document text
+
+\newsavebox{\Luiuc}\sbox{\Luiuc}{\parbox[b]{1.75in}{\vspace{0.5in}
+\includegraphics[width=1.2\linewidth]{logo.png}}} % Company/institution logo at the top left of the page
+\makeletterhead{Uiuc}{\Lheader{\usebox{\Luiuc}}}
+
+\newlfmP{sigsize=50pt} % Slightly decrease the height of the signature field
+\newlfmP{addrfromemail} % Print an email address under the sender's address
+\PhrEmail{Email} % Customize the "E-mail" text
+
+\lthUiuc % Print the company/institution logo
+
+
+
+%----------------------------------------------------------------------------------------
+%	YOUR NAME AND CONTACT INFORMATION
+%----------------------------------------------------------------------------------------
+
+\namefrom{} % Name
+
+\addrfrom{
+\today\\[12pt] % Date
+Project Proposal - PDP8\\
+Aalborg University\\
+\\
+Rasmus L. Christensen \& Henrik Klarup
+}
+
+\emailfrom{\{\texttt{rasmus,henrik}\}@macellum.dk} % Phone number
+
+
+%----------------------------------------------------------------------------------------
 
 \begin{document}
-
-\begin{titlepage}
-
-\newcommand{\HRule}{\rule{\linewidth}{0.5mm}} % Defines a new command for the horizontal lines, change thickness here
-
-\center % Center everything on the page
- 
-%----------------------------------------------------------------------------------------
-%	HEADING SECTIONS
-%----------------------------------------------------------------------------------------
-
-\textsc{\LARGE Business Plan}\\[1.5cm] % Name of your university/college
-\textsc{\Large Venture Cup}\\[0.5cm] % Major heading such as course name
-\textsc{\large Startup Competetion 2015}\\[0.5cm] % Minor heading such as course title
+\begin{newlfm}
 
 %----------------------------------------------------------------------------------------
-%	TITLE SECTION
+%	LETTER CONTENT
 %----------------------------------------------------------------------------------------
-
-\HRule \\[0.4cm]
-{ \huge \bfseries macellum.dk}\\[0.4cm] % Title of your document
-\HRule \\[1.5cm]
- 
-%----------------------------------------------------------------------------------------
-%	AUTHOR SECTION
-%----------------------------------------------------------------------------------------
-
-\begin{minipage}{0.4\textwidth}
-\begin{flushleft} \large
-Rasmus L. \textsc{Christensen} % Your name
-\end{flushleft}
-\end{minipage}
-~
-\begin{minipage}{0.4\textwidth}
-\begin{flushright} \large
-Henrik \textsc{Klarup} % Supervisor's Name
-\end{flushright}
-\end{minipage}\\[2cm]
-
-% If you don't want a supervisor, uncomment the two lines below and remove the section above
-%\Large \emph{Author:}\\
-%John \textsc{Smith}\\[3cm] % Your name
-
-%----------------------------------------------------------------------------------------
-%	DATE SECTION
-%----------------------------------------------------------------------------------------
-
-{\large \today}\\[2cm] % Date, change the \today to a set date if you want to be precise
-
-%----------------------------------------------------------------------------------------
-%	LOGO SECTION
-%----------------------------------------------------------------------------------------
-
-\includegraphics[width=\textwidth]{logo}\\[1cm] % Include a department/university logo - this will require the graphicx package
- 
-%----------------------------------------------------------------------------------------
-
-\vfill % Fill the rest of the page with whitespace
-
-\end{titlepage}
-
-
-\begin{abstract}
-Your abstract.
-\end{abstract}
 
 \section{Executive Summary (0.5-1 page)}
 Two main cost factors in modern day demersal fishing. Fuel costs and the price they obtain for their fish.
@@ -106,27 +93,21 @@ Two main cost factors in modern day demersal fishing. Fuel costs and the price t
 Macellum.dk aims to deliver a data visualization tool for fishermen in and around the northern sea. The tool is aimed at delivering up-to-date prices of the cargo hold, at the large fishing-harbours in nothern Europe. 
 
 \subsection{Customer Pain}
-Today, the fishermen obtain prices of their fish through either calling the buyers directly, or through an internet service called "PEFA". The main problem about "PEFA", is that the fish prices are given in a large table, and often given per kilo of the respective fish.
-
-Much information, hard to see through, confusing tables. Fishermen are 
+Today, the fishermen obtain prices of their fish through either calling the buyers directly, or through an internet service called "Pefa". The main problem about "Pefa", is that the fish prices are given in a large table, and often given per kilo of the respective fish. 
 
 These two methods have their advantages and disadvantages. The main advantage is that the fish prices are up-to-date, and they can see the price of one kilo at the price it is being traded at on the floor. However, to calculate how much they can obtain from delivering their cargo at one specific harbour, requires them to do tedious calculations of each an every single sort of their fish. This is the main concern, and often - the fishermen are paid lower prices for their fish, than what they could have gotten, should they have chosen another harbour. 
 
 \subsection{Business Idea}
-Homepage that shows the prices in an easy way. 
-
 The business idea have been divided into several phases, as each of them might prove viable to the individual fisheries.
 
-Furthermore, several phases have been indentified, wich will be used to plan further expansions of the company, as well as decide when the company has matured enough to being in new resources. 
-
 \subsubsection{Phase 1, Total Price of Catch}
-macellum.dk plans have developed a web-portal, in which fishermen can enter their catch (specie, quality and amount) - and then the portal updates it self on the current auction prices of the fish, and provides the skipper with an overview of the net-worth of his cargo, at the major ports in and around the northern sea. 
+Macellum.dk plans have developed a web-portal, in which fishermen can enter their catch (specie, quality and amount) - and then the portal updates it self on the current auction prices of the fish, and provides the skipper with an overview of the net-worth of his cargo, at the major ports in and around the northern sea. 
 
-\subsubsection{Phase 2, Total Price of Journey}
-Phase 3, aims to include the fuel costs at the individual harbours, and simply subtract the amount of fuel used during the journey, from the net-worth of the cargo. This could potentially lead to interesting findings for the skippers, as the fish prices might for example not be very high in Thyborøn, but if the fuel prices are very low, the net worth might be higher - should he choose to follow our advice. 
-
-\subsubsection{Phase 3, Automatic Total Worth of Catch}
+\subsubsection{Phase 2, Automatic Total Price of Catch}
 The developed portal, will obtain information on the catch by using the already installed system aboard the newer vessels. This system automatically weighs the fish and the fishermen just have to classify them. All is logged and stored in the vessels log system. These informations could be parsed to the web-interface, which then automatically updates the net worth of the cargo hold, without the fishermen having to do anything. 
+
+\subsubsection{Phase 3, Total Price of Journey}
+Phase 3, aims to include the fuel costs at the individual harbours, and simply subtract the amount of fuel used during the journey, from the net-worth of the cargo. This could potentially lead to interesting findings for the skippers, as the fish prices might for example not be very high in Thyborøn, but if the fuel prices are very low, the net worth might be higher - should he choose to follow our advice. 
 
 \subsubsection{Phase 4, Total Price of Journey + Estimated Price of Fish Tomorrow}
 This project aims to deploy mathematical models on the fish prices. It is possible to obtain the auction prices of fish through the last 10 years, and it is thus possible to develop a model that estimates the price the skipper can obtain for his fish tomorrow. This will give a better overview to the skipper, as he cannot sell his fish "here and now", due to logistical reasons. 
@@ -134,33 +115,20 @@ This project aims to deploy mathematical models on the fish prices. It is possib
 \subsubsection{Phase 5, Smart System for Auction Price Information}
 This phase aims at developing another online web-portal from which the auction prices of different fish are being entered. The main purpose is to streamline the way in which this information is gathered, and thus make it easier for macellum.dk to obtain the information - but also for the fishermen who only deliver locally, to obtain the prices they need. 
 
+
 \subsubsection{Phase 6, Combine the Two}
 When the above are combine, the system will be totally self-sufficient. 
 
-\subsubsection{Phase 7: Other applications/markets}
-Farmers and Country sellers as B2B markets, if B2C, christmas gifts, groceries etc. a little like price-runner, just in bulk.  
-
 \subsection{Value Proposition}
-The decision to invest in a subscription from macellum.dk or not is rather easy to compute. Tests have shown, that the fishermen using the system obtain roughly X\% more for their catch than thos not using it. This amounts to an investment return of X\% and clearly shows that the investment is worthwile. This will be used as the driving motivator for the fishermen, and will be presented to them at various fishery expos around Europe.
-
 The decision to either buy or not buy our product will have to be weighed up against the fisherman having his own calculations, or spend a rather small amount on a system that does it for him,
 
 \subsection{Idea Protection}
-First on the market. The algorithms developed later can be patented, but as such - the idea is not patentable initially. However, as we are first movers - many steps have been taken to ensure that macellum.dk is a better product than the rest. Also, given that we have the National Danish Fishing Organization aboard, we are already several steps ahead of our competitors. 
-
-It is also sought to develop a system that works together with Marel Samlon \todo{eller andre}, which further strengthens our market position. 
+First on the market. 
 
 \section{Market and Costumer (2-3 pages)}
 \subsection{Customer Profile}
-The average fisherman/skipper is 
 \subsection{Testing}
-Testing is currently being carried out in a collaboration with the Danish Fisheries Organization and cluser-organiztion called Konsumfisk.dk. Initial tests have shown that the fishermen using our system obtain X\% more for their catch. 
-
 \subsection{Market}
-The Danish market for such a system consist of 2600 registered vessels grossing a total of 16 billion DKK worth of fish a year. 
-
-In total, it is estimated that there exist XXXXXX industrial fishing vessels worldwide. At other markets, farmers in southern European Countries make up a substantial part of their respective countries economy. This market could also be strengthened by such a system. 
-
 Denmark -> England -> Holland -> Germany
 
 France, Spain, Italy.
@@ -168,29 +136,27 @@ France, Spain, Italy.
 Potentially Greenland, Canada and America.
 
 \section{Industry and Competetion (1-2 pages)}
-
-
 Kort indledning til hvordan industrien fungerer i de forskellige lande. 
 
 \subsection{Competetion}
-Long story short, there are not competetive systems in function yet. However, should the auction houses all of the sudden decide acces to our system, they would quickly see that the fishermen would go to harbours using our system (getting them addicted to the system).
+The main competitors of macellum, are the danish collaboration between auction houses PEFA.com, the dutch auctions. 
 
 However, they do not as such pose a direct threat, as none of them deliver systems such as this. However, they might be disturbed by this sudden flow of information to the fishermen. As they all of the sudden obtain information which they previously haven't had the ability to get. 
 
 
 
 \subsection{Competetive Advantages}
-First movers, having a foot inside the business. 
+
 
 \subsection{Strategic Partners}
 Fishermens unions. 
 The danish government.
-European Union (for regional growth.)
+Banks and other people with an intereset in financial analysis 
 
 \section{People and Organization (1-2 pages)}
 The organization is simple, and there are 3 people involved.
 \begin{enumerate}
-	\item Rasmus Lundgaard Christensen, Industrial PhD Student, Big Data Anlaysis at Lodam electronics A/S and Aalborg University.
+	\item Rasmus Lundgaard Christensen, Industrial PhD Student at Lodam electronics A/S and Aalborg University.
 	\item Henrik Klarup, Master Student, Software, Aalborg University.
 	\item Frits Lundgaard Christensen, Retired Fishermen, Hvide Sande (external consultant).
 \end{enumerate}
@@ -200,7 +166,7 @@ The organization is simple, and there are 3 people involved.
 \subsection{Business Model}
 As with the business plan, the model can also be divided into three phases. 
 \subsubsection{Phase 1, Only the Fishermen}
-The business model is plain and simple. To use our service, you pay a monthly fee of 200 euros. This will give you access to the web-site which will be kept up to date. The subscription is loyalty based, and will go down 10 euros per year, ending at 100 euros/month. The reason for this loyalty based system, is that fishermen are keen to stay if they can see a light at the end of the tunnel.  
+The business model is plain and simple. To use our service, you pay a monthly fee of 250 euros. This will give you access to the web-site which will be kept up to date. 
 
 \subsubsection{Phase 2, The Fishermen and the Buyers}
 Once the company makes enough money to hire one or two software developers fulltime, the extensions of the homepage/application will be sought developed. The plan of this phase, is to implement a solution where the buyers can go and check the prices of fish at various harbours, based on the reports from the individual vessels cargo hold. This will allow the buyers to go where the prices are lowest, and could potentially alter the market. 
@@ -211,18 +177,16 @@ Lastly, a collection of all the prices could prove viable for the auction houses
 At inkludere auktionshusene så man får en samlet oversigt over hvad fiskene koster de forskellige steder.
 
 \subsection{Economies of scale}
-The number of industrial fishing vessels in Denmark alone, amounts to 2600 as of today\footnote{Dansk Fiskeriforening indsæt link}. If this product is sold to 10 percent of these vessels, the net gross of the company will be 52000 euro/month, for Denmark alone. This scales at a rapid rate.
+The number of industrial fishing vessels in Denmark alone, amounts to 2662 as of today\footnote{Dansk Fiskeriforening indsæt link}. If this product is sold to 10 percent of these vessels, the net gross of the company will be 39900 euro/month, for Denmark alone.
 
 As this project focuses on implementing this on the large industrial countries around the northern sea (England, the Netherlands, Germany, Belgrium, Sweden and Norway). These industries are averagely are the same size as the danish, and totally, thus amounts to a gross net income of almost 280.000 euros a month. 
 
 Skalérbarheden af projektet. 
 
-The main issue with scalability, is the server storage which should be devised so it does not run out of memory. 
+The main issue with scalability, is the server storage which should be devised so it does not run out of 
 
 \subsection{Financing}
 The financing of the project can be made in two ways. One, we develop on the system as we have done till now, and get the system tested at sea (through contacts of Frits Christensen), and then spread the system over social medias and Fiskerforum.dk (through contacts of Frits Christensen). If the word spreads in the fishing community that there is a possible project - they will come running and want to buy the product. 
-
-Investment from Borean Innovation of 2 million DKK, which will keep the company running for 2 years. 
 
 The other way, is to find an investor that is willing to invest some money in the project, and in return be a part owner of the system. This will allow a more rapid development of the project, and a quicker way for the project to be self sustaining. In \ref{sec:budget} a tentative budget have been made.
 
@@ -260,4 +224,8 @@ Thrane \& Thrane Internet@Sea System 						& 10.000 kr.\\
 \end{tabular}
 \end{center}
 
+
+%----------------------------------------------------------------------------------------
+
+\end{newlfm}
 \end{document}
